# DistributionRegressor

./: .gitignore  INSTALL.md  MANIFEST.in  README.md  build_package.py  pyproject.toml  setup.py
distribution_regressor/: __init__.py  distribution_regressor_CDF.py  distribution_regressor_rf.py  distribution_regressor_rf_single.py  distribution_regressor_soft_target.py  regressor.py
docs/: generate_figures.py  index.html
examples/: README.md  basic_usage.py  comparison_with_standard_regression.py  distribution_visualization.py  uncertainty_quantification.py
